Bug 125337 - FILEOPEN DOCX Empty data table row is lost on column chart opening
Summary: FILEOPEN DOCX Empty data table row is lost on column chart opening
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2 all versions
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-05-17 10:42 UTC by NISZ LibreOffice Team
Modified: 2019-08-30 13:27 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word with embedded xlsx data source (39.15 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-05-17 10:43 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Word and Writer (89.66 KB, image/png)
2019-05-17 10:43 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-05-17 10:42:37 UTC
Description:
Attached document has a strange data table for the chart: of the tree data rows the last one is empty except for the title.
Word adds this title to the legend and leaves place for the empty values on the chart.
LO however moves the empty data rows name to the place of the row before it and drops the empty column.


Steps to Reproduce:
1.	Open attached file in Word and Writer
2.	Notice that in Word the orange colored column has title “2. adatsor” while in Writer it has title “Oszlop1”.


Actual Results:
Title of the second data row is replaced with the title of the empty data row. The empty row should be present in the data table and depicted on the chart.



Expected Results:
There should be no such data loss.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2019-05-17 10:43:09 UTC
Created attachment 151483 [details]
Example file from Word with embedded xlsx data source
Comment 2 NISZ LibreOffice Team 2019-05-17 10:43:27 UTC
Created attachment 151484 [details]
Screenshot of the original document side by side in Word and Writer
Comment 3 Roman Kuznetsov 2019-05-18 20:17:57 UTC
I confirm it in

Version: 6.3.0.0.alpha0+
Build ID: 65f81f6acdeb03b34033a1c6515618936d5f8eca
CPU threads: 4; OS: Linux 5.0; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-04-23_17:18:14
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded
Comment 4 Xisco Faulí 2019-05-22 15:56:41 UTC
Sample problem in

Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.15; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8)
Comment 5 Commit Notification 2019-08-07 12:24:51 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/80386c73e172975572f265018333c6231a6b3b22%5E%21

tdf#125337 Chart DOCX Import: fix missing empty data series columns

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.