tdf#125337 Chart DOCX Import: fix empty dataseries columns

Create an empty column for the data series with NAN vales,
which is not contain any data, but 'ptCount' ooxml tag
show there are "datas".
Also the data series names will be appeared correctly
in the right order.

Change-Id: I4eac94c2b9f34c84c4c19e4717cafbd440b20087